# savvy_systems

./: .github_setup.md  .gitignore  BRANCHES.md  IMPLEMENTATION_PLAN.md  LICENSE  PYTHON_BACKEND_SETUP.md  README.md  clear_cache.html  index.html  package-lock.json  package.json
.github/workflows/: generate-embeddings.yml  update-package-index.yml
cie/: README.md
cie/docs/: ARCHITECTURE.md  INTEGRATION.md  PRIVACY.md  ROADMAP.md  TODO.md
firebase-functions/: .env.example  .firebaserc  .gitignore  QUICKSTART.md  README.md  setup-secrets.md
firebase-functions/functions/: index.js  package-lock.json  package.json
package-index/: DEPLOYMENT.md  DOCKER_SOLUTION.md  EMBEDDINGS.md  MANUAL_UPLOAD.md  QUICKSTART.md  README.md
package-index/docker/: .env.example  .gitignore  API_STATUS.md  Dockerfile  Dockerfile.embeddings  Dockerfile.nexus  Dockerfile.unified  NEXUS_SETUP.md  README.md  docker-compose-with-nexus.yml  docker-compose.yml  start-nexus.ps1  start.ps1
package-index/generator/: README.md  choco-embeddings-metadata.json  choco-embeddings.npy  choco-embeddings.pkl  choco-index-full.json  choco_scraper.py  choco_scraper_old.py  embeddings-metadata.json  generate_and_upload_embeddings.bat  requirements-embeddings.txt  requirements.txt  scheduler.py  scraper_nexus.py  (+13 more)
python_service/: requirements.txt  search_service.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: data_cache.rs  main.rs  search_service.rs
src-tauri/src/package_manager/: chocolatey.rs  mod.rs  types.rs  winget.rs
(+22 files in other folders)
